--- a/.github/workflows/gomu-gomu-tests.yml
+++ b/.github/workflows/gomu-gomu-tests.yml
@@ -52,3 +52,22 @@ jobs:
           cd ../gomu-gomu-no-gatling
           RUST_LOG=info cargo run -- shoot -c config/default.yaml
           kill $MADARA_RUN_PID
+
+      - name: Process results
+        run: |
+          set -v -x +e
+          cd ../gomu-gomu-no-gatling
+          jq 
+          '.benches[] |= (.name as $benchName | .metrics[] |= (.name = .name + " ("+ $benchName + ")")) # Append benchmark name to each metric name
+          | .benches[].metrics[].extra = .extra # set extra field for each metric
+          |.benches # extract only benches
+          |map(.metrics)|add # merge metrics from different benches
+          |map(select(.name | test("Average TPS|Average UOPS|Average Extrinsics|Average Steps"))) #filter only the metrics we want'\
+          report.json
+
+      - name: Upload madara logs
+        uses: actions/upload-artifact@v2
+        with:
+          name: madara-log
+          path: madara.log
+        if: always()
