--- a/.github/workflows/gomu-gomu-tests.yml
+++ b/.github/workflows/gomu-gomu-tests.yml
@@ -19,7 +19,7 @@ jobs:
           key:
             ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}-${{
             github.run_id }}
-          fail-on-cache-miss: true
+          # fail-on-cache-miss: true
 
       - name: Setup rust toolchain
         run: |
@@ -40,23 +40,23 @@ jobs:
 
       - name: Setup dev chain
         run: |
-          cd ../madara
-          ./target/production/madara setup --chain=dev --from-local=configs
+          # cd ../madara
+          # ./target/production/madara setup --chain=dev --from-local=configs
 
       - name: Run gomu gomu test
         run: |-
-          set -v -x +e
-          ./target/production/madara --dev --cache > madara.log 2>&1 &
-          MADARA_RUN_PID=$!
-          while ! echo exit | nc localhost 9944; do sleep 1; done
-          cd ../gomu-gomu-no-gatling
-          RUST_LOG=info cargo run -- shoot -c config/default.yaml
-          kill $MADARA_RUN_PID
+          # set -v -x +e
+          # ./target/production/madara --dev --cache > madara.log 2>&1 &
+          # MADARA_RUN_PID=$!
+          # while ! echo exit | nc localhost 9944; do sleep 1; done
+          # cd ../gomu-gomu-no-gatling
+          # RUST_LOG=info cargo run -- shoot -c config/default.yaml
+          # kill $MADARA_RUN_PID
 
       - name: Process results
         run: |
           set -v -x +e
-          cd ../gomu-gomu-no-gatling
+          cd ../madara
           jq 
           '.benches[] |= (.name as $benchName | .metrics[] |= (.name = .name + " ("+ $benchName + ")")) # Append benchmark name to each metric name
           | .benches[].metrics[].extra = .extra # set extra field for each metric
