--- a/.github/workflows/gomu-gomu-tests.yml
+++ b/.github/workflows/gomu-gomu-tests.yml
@@ -23,20 +23,20 @@ jobs:
 
       - name: Setup rust toolchain
         run: |
-          rustup target add x86_64-unknown-linux-gnu
+          # rustup target add x86_64-unknown-linux-gnu
 
       - name: Setup build deps (linux)
         run: |
-          sudo apt update
-          sudo apt install -y clang llvm libudev-dev protobuf-compiler libssl-dev pkg-config
+          # sudo apt update
+          # sudo apt install -y clang llvm libudev-dev protobuf-compiler libssl-dev pkg-config
 
       - name: Setup gomu gomu
         run: |
-          set -v -x +e
-          cd ..
-          git clone https://github.com/keep-starknet-strange/gomu-gomu-no-gatling.git
-          cd gomu-gomu-no-gatling
-          cargo install --path .
+          # set -v -x +e
+          # cd ..
+          # git clone https://github.com/keep-starknet-strange/gomu-gomu-no-gatling.git
+          # cd gomu-gomu-no-gatling
+          # cargo install --path .
 
       - name: Setup dev chain
         run: |
